# child_abuse_detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt  testNotebook.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
.logs/: complexity.txt  coverage.txt  dependencies.txt  docstring.txt  maintainability.txt  mypy.txt  pylint-log.txt  safety.txt
.shell/: complexity.sh  cov.sh  docstring.sh  maintainability.sh  pylint.sh
assets/: ChildAbuse.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
child_abuse_detection/: Vectorization.py  __init__.py  stopword.py  text_classification.py  text_utils.py  vectorization.py
docker/: README.md
tests/: test_stopwrod.py  test_text_utils.py  test_vectorization.py
tests/test_example/: test_hello.py
